2009-06-06  Nicolas François  <nicolas.francois@centraliens.net>

	* man/passwd.5.xml, man/shadow.5.xml: Document the passwd- and
	shadow- files.

2009-06-06  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/su.c: Preserve the DISPLAY and XAUTHORITY environment
	variables, even with --login. This was not the case before in the
	PAM version.

2009-06-06  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c, src/groupmod.c, src/groupadd.c, src/faillog.c:
	Fix typos. Take this opportunity to split the usage messages into
	smaller messages (one per option).
	* src/pwck.c: Fix typo.

2009-06-05  Petri Koistinen  <petri.koistinen@iki.fi>

	* man/passwd.1.xml: The short option for --mindays is -n, not -m.

2009-06-04  Mike Frysinger  <vapier@gentoo.org>

	* .gitignore, man/.gitignore, src/.gitignore: Added .gitignore
	files.

2009-06-04  Nicolas François  <nicolas.francois@centraliens.net>

	* man/su.1.xml: Use <option> for the login.defs options.
	* man/su.1.xml: Improve the documentation of the su behavior
	regarding environment variables.
	* man/su.1.xml: Document that the login.defs file is used.

2009-06-04  Nicolas François  <nicolas.francois@centraliens.net>

	* man/login.1.xml: Document that the login.defs file is used.

2009-06-04  Nicolas François  <nicolas.francois@centraliens.net>

	* man/login.defs.d/ENVIRON_FILE.xml: Document the format for
	comments.

2009-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* man/gpasswd.1.xml: Ease the translation of the refpurpose.
	* man/gpasswd.1.xml: Fix typo, shorten sentences.

2009-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* man/pwck.8.xml, man/grpck.8.xml: Move the SEE ALSO section at
	the end.

2009-05-25  Nicolas François  <nicolas.francois@centraliens.net>

	* src/vipw.c: Make sure opened files are closed.

2009-05-25  Nicolas François  <nicolas.francois@centraliens.net>

	* man/chpasswd.8.xml, man/grpck.8.xml, man/newgrp.1.xml,