@@ -1,5 +1,11 @@
 2009-06-06  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* src/su.c, man/su.1.xml: The default behavior (without -p or
+	--login) is to copy most of the environment variables. Revert a
+	previous change and update the documentation.
+
+2009-06-06  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* man/passwd.5.xml, man/shadow.5.xml: Document the passwd- and
 	shadow- files.
 
